--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,19 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:m5stack-atom]
+[platformio]
+default_envs = m5stack-atom
+
+[env]
 platform = espressif32
-board = m5stack-atom
 framework = arduino
+upload_speed = 1500000
+monitor_speed = 115200
 lib_deps = 
 	m5stack/M5Unified@0.1.8
 	m5stack/M5Atomic-Motion@^1.0.0
 	fastled/FastLED@^3.7.5
+	h2zero/NimBLE-Arduino@^1.4.2
+
+[env:m5stack-atom]
+board = m5stack-atom
